# acit-2911-group-7

./: .gitignore  README.md  app.py  barry.md  contact.html  home.html  index.html  login.html  main.py  portfolio-buy.html  portfolio-create.html  portfolio-detail.html  portfolio-sell.html  portfolio.html  portfolios.html  pyproject.toml  styles.css  users.db
.github/workflows/: ci.yml
app/: __init__.py  models.py  routes.py  services.py
app/static/: styles.css
app/templates/: base.html  index.html  login.html  portfolio_form.html  position_form.html  trade_form.html
portfolio/: app.py
portfolio/templates/: about.html  create_portfolio.html  holdings.html
static/: main.css  portfolio.css
templates/: buy.html  contact.html  create_portfolio.html  holdings.html  index.html  layout.html  login.html  portfolio.html  sell.html
tests/: test_integration.py
